--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1300,6 +1300,10 @@ section,
 }
 
 .team .member span {
+  color: var(--contrast-color);
+}
+
+.team .member span {
   font-style: italic;
   display: block;
   font-size: 13px;
