Main page and contacts.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -768,6 +768,7 @@ section,
 
 .section-title p {
   margin-bottom: 0;
+  text-align: left;
 }
 
 /*--------------------------------------------------------------
