--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1621,6 +1621,10 @@ section,
   color: var(--accent-color);
 }
 
+.service-details .section {
+  padding: 0;
+}
+
 /*--------------------------------------------------------------
 # Starter Section Section
 --------------------------------------------------------------*/
