--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1650,6 +1650,30 @@ section,
 }
 
 /*--------------------------------------------------------------
+# Terms of Service Section
+--------------------------------------------------------------*/
+.terms-of-service p {
+  font-size: 15px;
+}
+
+.terms-of-service ul {
+  list-style: none;
+  padding: 0;
+  font-size: 15px;
+}
+
+.terms-of-service ul li {
+  padding: 5px 0;
+  display: flex;
+  align-items: center;
+}
+
+.terms-of-service ul i {
+  margin-right: 8px;
+  color: var(--accent-color);
+}
+
+/*--------------------------------------------------------------
 # Starter Section
 --------------------------------------------------------------*/
 .starter-section {
