Hide captcha badge.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1674,6 +1674,13 @@ section,
 }
 
 /*--------------------------------------------------------------
+# Captcha
+--------------------------------------------------------------*/
+.grecaptcha-badge {
+  visibility: hidden;
+}
+
+/*--------------------------------------------------------------
 # Starter Section
 --------------------------------------------------------------*/
 .starter-section {
